updated testing requirements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">ErikNevileAD340</string>
     <string name="enter_text">Enter Some Text</string>
+
     <string name="send_text">Send</string>
     <string name="nav_about">About</string>
     <string name="nav_home">Home</string>
@@ -15,5 +16,8 @@
     where the text which was entered is shown. If the user clicks on the top left grid view icon, they
     will be taken to a RecyclerView list of different zombie movies, which can be clicked on to learn
     further information about which ever movie. Thanks for checking it out!</string>
+
+
+    <string name="send_message">Send</string>
 
 </resources>
