--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="nav_about">About</string>
     <string name="nav_home">Home</string>
     <string name="nav_movies">Movies</string>
+    <string name="nav_traffic">Traffic</string>
     <string name="nav_settings">Settings</string>
     <string name="navigation_drawer_open">Open Nav Drawer</string>
     <string name="navigation_drawer_close">Close Nav Drawer</string>
